--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
 page-home {
 
 }
+h3 {
+    font-family: Roboto, sans-serif;
+    text-align: center;
+  }
